实现了chat接口

--- a/fastapi_project/chat/chat_main.ipynb
+++ b/fastapi_project/chat/chat_main.ipynb
@@ -365,8 +365,8 @@
     }
    ],
    "source": [
-    "import chat_util\n",
-    "from chat_util import start_llama_query\n",
+    "import fastapi_project.util.chat_util as chat_util\n",
+    "from fastapi_project.util.chat_util import start_llama_query\n",
     "simpleindex,doc_sum_index =start_llama_query(deepseekapi=\"sk-32361150eb3b467eb085d49308f6906d\")\n",
     "res = chat_util.get_docs_from_simpleindex(simpleindex,user_question='地方法院是什么？')"
    ]
