测试了对知乎的爬取，只能爬取首页，其余失败

--- a/fastapi_project/test.ipynb
+++ b/fastapi_project/test.ipynb
@@ -6,6 +6,27 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "history = []\n",
+    "if history:\n",
+    "    print(1)\n",
+    "else:\n",
+    "    print(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
